# mkimg

./: .gitignore  README.md  commands  main.py  pyproject.toml  system_prompt.md  tool_spec.md
examples/: .env.example  config.yaml  prompts.md
src/sdprompt/: bfl_generator.py  config.py  image_generator.py  main.py  metadata.py  prompt_generator.py
src/sdprompt/prompts/: system_prompt.md
src/sdprompt/utils/: hash.py  image.py  logging.py  retry.py
tests/: test_config.py  test_config.yaml  test_image_generator.py  test_prompt_generator.py
